<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Department">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/departmentSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/csRadio">

            <RadioButton
                android:id="@+id/csRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/computer_science" />

            <RadioButton
                android:id="@+id/sisRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/software_info_systems" />

            <RadioButton
                android:id="@+id/bioRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bio_informatics" />

            <RadioButton
                android:id="@+id/dataRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_science" />

        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:onClick="onCancelClicked"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:onClick="onSelectClicked"
                android:text="@string/select" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>